--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <load 
     src="src/components/Head.html"
-    title="Александр Таймасов"
-    description="test Project"
+    title="Vite + SCSS + JS vanilla"
+    description="Template: Vite + SCSS + JS vanilla "
     ogURL="https://xn--80aag0apnud.xn--p1ai/"
     ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
     />
