improve file organization

--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en" class="html">
   <head>
     <load 
-    src="src/components/Head.html"
-    title="Vite + SCSS + JS vanilla"
-    description="Template: Vite + SCSS + JS vanilla "
+    src="src/components/_root/Head.html"
+    title="Alexander Taimasov"
+    description="Alexander Taimasov's project"
     ogURL="https://xn--80aag0apnud.xn--p1ai/"
     ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
     />
   </head>
   <body class="body--grid">
     <header class="header header--grid">
-        <load src="src/components/TheHeader.html" />
+        <load src="src/components/_root/TheHeader.html" />
     </header>
 
     <main class="main main--grid" id="app">
-      <load src="src/components/TheMain.html" />
+      <load src="src/components/_root/TheMain.html" />
     </main>
 
     <footer class="footer footer--grid">
-      <load src="src/components/TheFooter.html"/>
+      <load src="src/components/_root/TheFooter.html"/>
     </footer>
 
     <script type="module" src="./src/scripts/main.js"></script>
