--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="html">
   <head>
     <load 
-    src="src/components/_root/Head.html"
+    src="src/components/Head.html"
     title="Alexander Taimasov"
     description="Alexander Taimasov's project"
     ogURL="https://xn--80aag0apnud.xn--p1ai/"
@@ -11,15 +11,15 @@
   </head>
   <body class="body--grid">
     <header class="header header--grid">
-        <load src="src/components/_root/TheHeader.html" />
+        <load src="src/components/TheHeader.html" />
     </header>
 
     <main class="main main--grid" id="app">
-      <load src="src/components/_root/TheMain.html" />
+      <load src="src/components/TheMain.html" />
     </main>
 
     <footer class="footer footer--grid">
-      <load src="src/components/_root/TheFooter.html"/>
+      <load src="src/components/TheFooter.html"/>
     </footer>
 
     <script type="module" src="./src/scripts/main.js"></script>
