add scroll-bar styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
     />
   </head>
-  <body class="body--grid">
+  <body class="body body--grid">
     <header class="header header--grid">
         <load src="src/components/TheHeader.html" />
     </header>
