--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="html">
   <head>
-    <load 
+    <load
     src="src/components/Head.html"
     title="Alexander Taimasov"
     description="Alexander Taimasov's project"
@@ -9,17 +9,17 @@
     ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
     />
   </head>
-  <body class="body body--grid">
-    
-    <header class="header header--grid">
+  <body class="body smooth-mesh-background">
+
+    <header class="header">
         <load src="src/components/TheHeader.html" />
     </header>
 
-    <main class="main main--grid" id="app">
+    <main class="main" id="app">
       <load src="src/components/TheMain.html" />
     </main>
 
-    <footer class="footer footer--grid">
+    <footer class="footer">
       <load src="src/components/TheFooter.html"/>
     </footer>
 
