--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="html">
   <head>
     <load
-    src="src/components/Head.html"
-    title="Alexander Taimasov"
-    description="Alexander Taimasov's project"
-    ogURL="https://xn--80aag0apnud.xn--p1ai/"
-    ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
+      src="src/components/Head.html"
+      title="Alexander Taimasov"
+      description="Alexander Taimasov's project"
+      ogURL="https://xn--80aag0apnud.xn--p1ai/"
+      ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
     />
   </head>
   <body class="body smooth-mesh-background">
-
     <header class="header">
-        <load src="src/components/TheHeader.html" />
+      <load src="src/components/TheHeader.html" />
     </header>
 
     <main class="main" id="app">
@@ -20,7 +19,7 @@
     </main>
 
     <footer class="footer">
-      <load src="src/components/TheFooter.html"/>
+      <load src="src/components/TheFooter.html" />
     </footer>
 
     <script type="module" src="./src/scripts/main.js"></script>
