--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="html">
+<html lang="zxx" class="html">
   <head>
     <load
       src="src/components/Head.html"
