update meta tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
       src="src/components/Head.html"
       title="Alexander Taimasov"
       description="Alexander Taimasov's project"
-      ogURL="https://xn--80aag0apnud.xn--p1ai/"
-      ogImage="https://xn--80aag0apnud.xn--p1ai/img/Alexander-Taimasov.png"
+      ogImage="https://avatars.githubusercontent.com/u/136252899"
     />
   </head>
   <body class="body smooth-mesh-background">
